{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 55,
  "lineage": "1431e4e9-29ee-c9cf-fdbd-cd790402baf3",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17-20221209075355068400000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "target_id": "10.0.1.40"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.ec_1",
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.private-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17-20221209075345260400000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "target_id": "10.0.4.80"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.ec_2_efs",
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.private-2",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "availability_zone": "us-east-2c",
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17-20221209075344865600000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "target_id": "172.16.0.239"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.ec_3",
            "module.security_group.aws_security_group.aws-sg-2",
            "module.vpc.aws_subnet.subnet-private-1",
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17-2022120907565400410000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "target_id": "10.0.0.138"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.ec_4",
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:loadbalancer/app/ALB-1/a5b0f594c5cc01ae",
            "arn_suffix": "app/ALB-1/a5b0f594c5cc01ae",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-1-1361549685.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:loadbalancer/app/ALB-1/a5b0f594c5cc01ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-006df843a00418426"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b2c296014d4203d"
              },
              {
                "subnet_id": "subnet-03f6f5978fe9b420d"
              },
              {
                "subnet_id": "subnet-0848c2f8baf202ce6"
              }
            ],
            "subnets": [
              "subnet-00b2c296014d4203d",
              "subnet-03f6f5978fe9b420d",
              "subnet-0848c2f8baf202ce6"
            ],
            "vpc_id": "vpc-097e2f5268bf7f5b6",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:listener/app/ALB-1/a5b0f594c5cc01ae/8cfb3e366f773462",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:listener/app/ALB-1/a5b0f594c5cc01ae/8cfb3e366f773462",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:loadbalancer/app/ALB-1/a5b0f594c5cc01ae",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.lb",
            "module.alb.aws_lb_target_group.tg",
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:listener-rule/app/ALB-1/a5b0f594c5cc01ae/8cfb3e366f773462/dc40525a6b83ea6f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/var/www/html/index.html"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:listener-rule/app/ALB-1/a5b0f594c5cc01ae/8cfb3e366f773462/dc40525a6b83ea6f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:listener/app/ALB-1/a5b0f594c5cc01ae/8cfb3e366f773462",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.lb",
            "module.alb.aws_lb_listener.front_end_1",
            "module.alb.aws_lb_target_group.tg",
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "arn_suffix": "targetgroup/TargetGroup/50542ea5be390a17",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:041805433029:targetgroup/TargetGroup/50542ea5be390a17",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada6d94f396377f2",
            "arn": "arn:aws:ec2:us-east-2:041805433029:instance/i-0869e70291f5ba220",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0869e70291f5ba220",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "madhur-docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0006a896ccb358611",
            "private_dns": "ip-10-0-1-40.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d3c12498672285d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-006df843a00418426"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013aeda7b4ad5c766",
            "tags": {
              "Name": "Private-vpc-1(1)"
            },
            "tags_all": {
              "Name": "Private-vpc-1(1)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006df843a00418426"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.private-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec_2_efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada6d94f396377f2",
            "arn": "arn:aws:ec2:us-east-2:041805433029:instance/i-0c9e02664e7284088",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9e02664e7284088",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "madhur-docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0192f0e3b88d75ee6",
            "private_dns": "ip-10-0-4-80.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0d6a3cb045a95a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-006df843a00418426"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b2630ec9a3ce8e6",
            "tags": {
              "Name": "Private-vpc-1(2)"
            },
            "tags_all": {
              "Name": "Private-vpc-1(2)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006df843a00418426"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.private-2",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada6d94f396377f2",
            "arn": "arn:aws:ec2:us-east-2:041805433029:instance/i-05ac105ee0c456d1c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ac105ee0c456d1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "madhur-docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e401192bb9d8816",
            "private_dns": "ip-172-16-0-239.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d85832bba2055c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ea5306d5d994b785"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f37d2b403d7f48aa",
            "tags": {
              "Name": "Private-vpc-2(1)"
            },
            "tags_all": {
              "Name": "Private-vpc-2(1)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ea5306d5d994b785"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg-2",
            "module.vpc.aws_subnet.subnet-private-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada6d94f396377f2",
            "arn": "arn:aws:ec2:us-east-2:041805433029:instance/i-00e278a5711c65d82",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e278a5711c65d82",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "madhur-docker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a2fb851f3912916",
            "private_dns": "ip-10-0-0-138.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.138",
            "public_dns": "ec2-3-141-0-18.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.0.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b679f087cb8e66c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-006df843a00418426"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b2c296014d4203d",
            "tags": {
              "Name": "Public-vpc-1(1)"
            },
            "tags_all": {
              "Name": "Public-vpc-1(1)"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-006df843a00418426"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.aws-sg",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:security-group/sg-006df843a00418426",
            "description": "Allow HTTP, SSH, HTTPS , NFS and ICMP for ping",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006df843a00418426",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS from VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-sg",
            "name_prefix": "",
            "owner_id": "041805433029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-sg-prod"
            },
            "tags_all": {
              "Name": "aws-sg-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-sg-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:security-group/sg-0ea5306d5d994b785",
            "description": "Allow HTTP, SSH, HTTPS and ICMP for ping",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea5306d5d994b785",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-sg-2",
            "name_prefix": "",
            "owner_id": "041805433029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-sg-app-2"
            },
            "tags_all": {
              "Name": "aws-sg-app-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fef28c8f38649c37",
            "domain": "vpc",
            "id": "eipalloc-0fef28c8f38649c37",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-13-58-239-88.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.239.88",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_route_table_association.rt_assoc_vpc_public",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gateway-eip-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f225d3b3a98e18c1",
            "domain": "vpc",
            "id": "eipalloc-0f225d3b3a98e18c1",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-214-15.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.214.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_route_table_association.rt_assoc2_vpc2",
            "module.vpc.aws_subnet.subnet-public-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:internet-gateway/igw-0c8b3e4759249ff2a",
            "id": "igw-0c8b3e4759249ff2a",
            "owner_id": "041805433029",
            "tags": {
              "Name": "igwforvpc-1"
            },
            "tags_all": {
              "Name": "igwforvpc-1"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:internet-gateway/igw-0c95c2faeeedd1ed7",
            "id": "igw-0c95c2faeeedd1ed7",
            "owner_id": "041805433029",
            "tags": {
              "Name": "igwforvpc-2"
            },
            "tags_all": {
              "Name": "igwforvpc-2"
            },
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fef28c8f38649c37",
            "connectivity_type": "public",
            "id": "nat-0b275b1f5209d563c",
            "network_interface_id": "eni-0ec3ffbcdcfbd81c3",
            "private_ip": "10.0.0.44",
            "public_ip": "13.58.239.88",
            "subnet_id": "subnet-00b2c296014d4203d",
            "tags": {
              "Name": "Nat_gateway-vpc-1"
            },
            "tags_all": {
              "Name": "Nat_gateway-vpc-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-eip",
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_route_table_association.rt_assoc_vpc_public",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f225d3b3a98e18c1",
            "connectivity_type": "public",
            "id": "nat-0fe61287a3c1e8702",
            "network_interface_id": "eni-0ab63a2886f50cd78",
            "private_ip": "172.16.1.174",
            "public_ip": "3.19.214.15",
            "subnet_id": "subnet-05c502d0907eb2f37",
            "tags": {
              "Name": "Nat_gateway-vpc-2"
            },
            "tags_all": {
              "Name": "Nat_gateway-vpc-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-eip-vpc-2",
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_route_table_association.rt_assoc2_vpc2",
            "module.vpc.aws_subnet.subnet-public-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gateway-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ca8b0b19c5f8de081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b275b1f5209d563c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca8b0b19c5f8de08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-eip",
            "module.vpc.aws_nat_gateway.nat-gateway-vpc-1",
            "module.vpc.aws_route_table.aws-rt-private",
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_route_table_association.rt_assoc_vpc_public",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gateway-private-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f64cffd72e18dd3d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe61287a3c1e8702",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f64cffd72e18dd3d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat-gateway-eip-vpc-2",
            "module.vpc.aws_nat_gateway.nat-gateway-vpc-2",
            "module.vpc.aws_route_table.aws-rt-2-private",
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_route_table_association.rt_assoc2_vpc2",
            "module.vpc.aws_subnet.subnet-public-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "primary2secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07738aee4a7451bd63246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07738aee4a7451bd6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ff760a1ab3b24c00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2",
            "module.vpc.aws_vpc_peering_connection.vpc_peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "primary2secondarypublic_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ca8b0b19c5f8de083246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca8b0b19c5f8de08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ff760a1ab3b24c00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-private",
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2",
            "module.vpc.aws_vpc_peering_connection.vpc_peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c8b3e4759249ff2a",
            "id": "r-rtb-07738aee4a7451bd61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07738aee4a7451bd6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-vpc1",
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c95c2faeeedd1ed7",
            "id": "r-rtb-0f2df2a68ecf76bd81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2df2a68ecf76bd8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw-vpc2",
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "secondary2primary-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f64cffd72e18dd3d179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f64cffd72e18dd3d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ff760a1ab3b24c00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-private",
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2",
            "module.vpc.aws_vpc_peering_connection.vpc_peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "secondary2primary-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2df2a68ecf76bd8179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2df2a68ecf76bd8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ff760a1ab3b24c00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2",
            "module.vpc.aws_vpc_peering_connection.vpc_peer"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rt-2-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:route-table/rtb-0f64cffd72e18dd3d",
            "id": "rtb-0f64cffd72e18dd3d",
            "owner_id": "041805433029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vpc-2-rt-private"
            },
            "tags_all": {
              "Name": "Vpc-2-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rt-2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:route-table/rtb-0f2df2a68ecf76bd8",
            "id": "rtb-0f2df2a68ecf76bd8",
            "owner_id": "041805433029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vpc-2-rt-public"
            },
            "tags_all": {
              "Name": "Vpc-2-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:route-table/rtb-0ca8b0b19c5f8de08",
            "id": "rtb-0ca8b0b19c5f8de08",
            "owner_id": "041805433029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vpc-1-rt-private"
            },
            "tags_all": {
              "Name": "Vpc-1-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:route-table/rtb-07738aee4a7451bd6",
            "id": "rtb-07738aee4a7451bd6",
            "owner_id": "041805433029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vpc-1-rt-public"
            },
            "tags_all": {
              "Name": "Vpc-1-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc1_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021dcc3fce6e770d0",
            "route_table_id": "rtb-0f64cffd72e18dd3d",
            "subnet_id": "subnet-0f37d2b403d7f48aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-private",
            "module.vpc.aws_subnet.subnet-private-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc2_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf98a6bf8107e661",
            "route_table_id": "rtb-0ca8b0b19c5f8de08",
            "subnet_id": "subnet-00b2630ec9a3ce8e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-private",
            "module.vpc.aws_subnet.private-2",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc2_vpc1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4bc22bfa9ff9d55",
            "route_table_id": "rtb-07738aee4a7451bd6",
            "subnet_id": "subnet-03f6f5978fe9b420d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_subnet.public-2",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc2_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c24890d9f8bdb9ae",
            "route_table_id": "rtb-0f2df2a68ecf76bd8",
            "subnet_id": "subnet-05c502d0907eb2f37"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_subnet.subnet-public-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc3_vpc1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030a62a99bac9b016",
            "route_table_id": "rtb-07738aee4a7451bd6",
            "subnet_id": "subnet-0848c2f8baf202ce6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_subnet.public-3",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc3_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9cd54e7ebed5883",
            "route_table_id": "rtb-0f2df2a68ecf76bd8",
            "subnet_id": "subnet-00522fbcde9ffffd2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-2-public",
            "module.vpc.aws_subnet.subnet-public-2",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd15ff7bc188f614",
            "route_table_id": "rtb-0ca8b0b19c5f8de08",
            "subnet_id": "subnet-013aeda7b4ad5c766"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-private",
            "module.vpc.aws_subnet.private-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099435d86b11acba2",
            "route_table_id": "rtb-07738aee4a7451bd6",
            "subnet_id": "subnet-00b2c296014d4203d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.aws-rt-public",
            "module.vpc.aws_subnet.public-1",
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-013aeda7b4ad5c766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013aeda7b4ad5c766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "vpc-1-pvt-1-terra"
            },
            "tags_all": {
              "name": "vpc-1-pvt-1-terra"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-00b2630ec9a3ce8e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b2630ec9a3ce8e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terra-vpc-1-pvt-2"
            },
            "tags_all": {
              "name": "terra-vpc-1-pvt-2"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-00b2c296014d4203d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b2c296014d4203d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "vpc-1-pub-1-terra"
            },
            "tags_all": {
              "name": "vpc-1-pub-1-terra"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-03f6f5978fe9b420d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f6f5978fe9b420d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "vpc-1-pub-2-terra"
            },
            "tags_all": {
              "name": "vpc-1-pub-2-terra"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-0848c2f8baf202ce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0848c2f8baf202ce6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terra-vpc-1-pub-3"
            },
            "tags_all": {
              "name": "terra-vpc-1-pub-3"
            },
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-0f37d2b403d7f48aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f37d2b403d7f48aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terra-vpc-2-pvt-1"
            },
            "tags_all": {
              "name": "terra-vpc-2-pvt-1"
            },
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-05c502d0907eb2f37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c502d0907eb2f37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terra-vpc-2-pub-1"
            },
            "tags_all": {
              "name": "terra-vpc-2-pub-1"
            },
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:subnet/subnet-00522fbcde9ffffd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00522fbcde9ffffd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "041805433029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "terra-vpc-2-pub-2"
            },
            "tags_all": {
              "name": "terra-vpc-2-pub-2"
            },
            "vpc_id": "vpc-0f48f7e695253e7ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:vpc/vpc-097e2f5268bf7f5b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0460e228de31d0d80",
            "default_route_table_id": "rtb-0e5bc734d0ea0f441",
            "default_security_group_id": "sg-06ab46262b9fd39e4",
            "dhcp_options_id": "dopt-057cf712371524e1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097e2f5268bf7f5b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5bc734d0ea0f441",
            "owner_id": "041805433029",
            "tags": {
              "Name": "vpc-madhur-app-1"
            },
            "tags_all": {
              "Name": "vpc-madhur-app-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:041805433029:vpc/vpc-0f48f7e695253e7ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a7d9d5656ee6cecb",
            "default_route_table_id": "rtb-0a64151c9304efad6",
            "default_security_group_id": "sg-0417da75564bf144a",
            "dhcp_options_id": "dopt-057cf712371524e1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f48f7e695253e7ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a64151c9304efad6",
            "owner_id": "041805433029",
            "tags": {
              "Name": "vpc-madhur-app-2"
            },
            "tags_all": {
              "Name": "vpc-madhur-app-2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0ff760a1ab3b24c00",
            "peer_owner_id": "041805433029",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0f48f7e695253e7ab",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-097e2f5268bf7f5b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc-1",
            "module.vpc.aws_vpc.vpc-2"
          ]
        }
      ]
    }
  ]
}